ui.frontend/src/main/webpack/etisalat/styles/custom-components/header/top-navigation.scss
.top-nav {
  background-color: $sand-white;
  text-transform: uppercase;
  border: 0;
  margin-bottom: 0;
  position: fixed;
  z-index: 1030;
  top: 0;
  width: 100%;
  transition: 0.3s;
  min-height: 48px;

  &.fixedNav {
    position: fixed;
    top: -1px;
    left: 0;
    width: 100%;
    z-index: 9000;
    transition: 0.3s;
  }

  .top-nav-main-row {
    display: flex;
    justify-content: space-between;
  }

  .top-nav-channel {
    display: flex;
    justify-content: flex-start;
  }

  .top-nav-language {
    display: flex;
    justify-content: flex-end;
  }

  a {
    display: inline-block;
    width: 100%;
    height: 48px;
    font-size: 0.6875rem;
    letter-spacing: 0.1818181818em;
    color: $almost-black;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
  }

  .text-right a {
    justify-content: flex-end;
  }

  .text-center a {
    justify-content: center;
  }

  .active > a,
  .active > a:focus,
  .active > a:hover,
  a:focus,
  a:hover,
  a:hover {
    color: $almost-black;
    transition: 0.3s;
  }

  #top-nav-store-img {
    width: 14px;
    height: 18px;
    margin-left: 10px;
  }

  #top-nav-cart-img,
  svg {
    width: 24px;
    height: 21px;
    margin-left: 10px;
  }

  #top-nav-arrow-img {
    transform: rotate(90deg);
    width: 5px;
    height: 9px;
    margin-left: 10px;
    position: absolute;
    top: 43%;
    right: 10%;
  }

  span.language-switch-content {
    font-size: 1rem;
    font-weight: 100;
    font-family: GE SS Two, Arial, sans-serif;
    letter-spacing: 0;
  }

  span.badge-top {
    width: 1.31rem;
    height: 1.31rem;
    background-color: $main-green;
    color: $white;
    border-radius: 50%;
    line-height: 1.31rem;
    position: absolute;
    top: 0;
    left: 50%;
    letter-spacing: 2px;
    margin-left: 0.3rem;
    text-align: center;
  }

  .align-cart {
    a > div:first-child {
      margin-right: -10px;
      span {
        float: right;
      }
    }
    a > div:nth-child(2) {
      padding-top: 5px;
    }
  }
}
/*
 * RTL support
 */
html[lang="ar"] {
  *[dir="rtl"] {
    .top-nav-section {
      &.top-nav {
        a {
          font-size: 0.6875rem;
        }
        #top-nav-cart-img,
        .top-nav .links svg {
          margin-left: 0;
          margin-right: 10px;
        }
        .top-nav-right #top-nav-arrow-img {
          left: 0;
          right: auto;
        }
      }
      .top-nav-right {
        text-align: left;
      }
    }

    .top-nav {
      span.language-switch-content {
        font-size: 0.6875rem;
      }

      a {
        font-size: 0.875rem;
      }

      span.badge-top {
        right: 50%;
        left: auto;
        margin-right: 0.15rem;
        margin-left: 0;
        top: 0.25rem;
      }
    }

    #top-nav-store-img {
      margin-right: 10px;
    }

    #top-nav-cart-img {
      margin-right: 10px;
    }

    #top-nav-arrow-img {
      width: 5px;
      height: 9px;
      margin-left: 10px;
      transform: rotate(90deg);
      position: absolute;
      right: 15%;
      left: auto;
      top: 40%;
    }

    .align-cart {
      a > div:first-child {
        span {
          float: left;
        }
      }
      a > div:nth-child(2) {
        padding-top: 10px;
      }
    }
  }
}

.top-nav-section {
  height: 48px;
  #top-nav-cart-img,
  .links svg {
    width: 24px;
    height: 24px;
    margin-left: 10px;
    transform: translateZ(0);
  }
  .links {
    li {
      display: inline-block;
      a {
        padding: 0 1rem;
        @media (min-width: 992px) and (max-width: 1280px) {
          padding: 0 0.5rem;
        }
        svg {
          stroke: $almost-black;
        }
        .link-icon-wrapper {
          position: relative;

          .link-icon {
            position: absolute;
            top: -8px;
            right: -20px;
            min-width: 14px;
            min-height: 14px;
            height: 14px;
            width: 14px;
          }
        }
      }
    }
  }
  .top-nav-left {
    .links {
      a {
        font-weight: 800;
        height: 47px;
      }
      .active > a,
      .active > a:hover,
      a:hover {
        background: transparent;
        border-bottom: 2px solid $main-green;
        color: $main-green;
        height: 47px;
      }
    }
  }
  .top-nav-right {
    text-align: right;
    .links {
      li {
        a {
          padding: 0 1.2rem;
          position: relative;
          cursor: pointer;
          @media (min-width: 992px) and (max-width: 1366px) {
            padding: 0 0.5rem;
          }
          .nav-link-icon {
            padding-right: 0;
          }
        }
        &:last-child {
          a {
            padding-right: 0;
          }
        }
      }

      .badge-top {
        top: 6px;
        z-index: 99;
        letter-spacing: 0;
        font-weight: bold;
      }

      .language-switch-content + svg {
        width: 8px;
        height: 5px;
      }
      .language {
        list-style: none;
        text-transform: uppercase;
        display: block;
        padding-right: 28px;
        position: relative;
        a {
          font-size: $font11;

          &:after {
            border-style: solid;
            border-width: 1px 1px 0 0;
            content: "";
            display: inline-block;
            height: 0.8em;
            left: 7em;
            top: 16px;
            position: absolute;
            transform: rotate(135deg);
            vertical-align: top;
            width: 0.8em;
            padding-right: 0;
          }
          &.open {
            &:after {
              top: 1.95em;
              transform: rotate(-45deg);
            }
          }
        }
        .arabic-lang-content {
          font-size: $font16;
          font-weight: 100;
          letter-spacing: 0;
          font-family: GE SS Two, Arial, sans-serif;
          &:after {
            left: 4em;
            width: 0.5em;
            height: 0.5em;
          }
          &.open {
            &:after {
              top: 1.35em;
              transform: rotate(-45deg);
            }
          }
        }
      }

      .language-menu {
        display: none;
        text-align: center;
        left: -30px;
        list-style: none;
        margin: 0;
        padding: 0;
        position: absolute;
        top: 48px;
        width: 150px;
        z-index: 999;
        background-color: $sand-white;

        li {
          text-transform: uppercase;
          display: inline-block;
          padding: 10px;
          width: calc(100% - 45px);
          a {
            color: $almost-black;
            font-size: $font11;
            padding: 2px !important;
            height: 20px;
            &:after {
              display: none;
            }
            &:hover {
              color: $main-green;
            }
          }
          .arabic-lang-content {
            font-size: $font16;
            font-weight: 100;
            letter-spacing: 0;
            font-family: GE SS Two, Arial, sans-serif;
          }
        }
      }
    }
  }
  // there is no hover and active state in design for these links
  .active > a,
  .active > a:focus,
  .active > a:hover,
  a:focus,
  a:hover {
    background: transparent;
  }
}

html[lang="ar"] {
  *[dir="rtl"] {
    .top-nav-section {
      .top-nav-right {
        .links li:last-child a {
          padding-left: 0;
          padding-right: 1.5rem;
          &:hover {
            cursor: pointer;
          }
        }
      }
      .top-nav-left {
        .link-icon-wrapper {
          .link-icon {
            left: -20px;
            right: auto;
          }
        }
      }
    }
  }
}

